[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Inimigo/ghost-idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Inimigo/ghost-shriek.png" type="Texture" id=2]
[ext_resource path="res://Fantasma.gd" type="Script" id=3]
[ext_resource path="res://Assets/Inimigo/ghost-vanish.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Ataque"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteFantasma:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteFantasma:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteFantasma:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteFantasma:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteFantasma:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteFantasma:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Sumindo"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteFantasma:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteFantasma:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteFantasma:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 17 )

[node name="Fantasma" type="KinematicBody2D"]
position = Vector2( 1, -10 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimacaoFantasma" type="AnimationPlayer" parent="."]
autoplay = "Parado"
anims/Ataque = SubResource( 1 )
anims/Parado = SubResource( 2 )
anims/Sumindo = SubResource( 3 )

[node name="SpriteFantasma" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 7
frame = 1

[node name="ColisaoFantasma2" type="RayCast2D" parent="."]
position = Vector2( 0, -5 )
scale = Vector2( 1, 3.408 )
enabled = true
cast_to = Vector2( -16, 0 )

[node name="ColisaoFantasma" type="CollisionShape2D" parent="."]
position = Vector2( -2, -3 )
shape = SubResource( 4 )

[node name="FantasmaCheck" type="Area2D" parent="."]

[node name="ColisaoFantasma" type="CollisionShape2D" parent="FantasmaCheck"]
position = Vector2( -2, -3 )
shape = SubResource( 4 )

[connection signal="animation_finished" from="AnimacaoFantasma" to="." method="_on_AnimacaoFantasma_animation_finished"]
[connection signal="body_entered" from="FantasmaCheck" to="." method="_on_FantasmaCheck_body_entered"]
